--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,12 +46,12 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:labelFor="@id/editTextNumberDecimal"
+                android:labelFor="@id/edtN1"
                 android:text="@string/strN1"
                 tools:text="@string/strN1" />
 
             <EditText
-                android:id="@+id/editTextNumberDecimal"
+                android:id="@+id/edtN1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -64,12 +64,12 @@
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:labelFor="@id/editTextNumberDecimal2"
+                android:labelFor="@id/edtN2"
                 android:text="@string/strN2"
                 tools:text="@string/strN2" />
 
             <EditText
-                android:id="@+id/editTextNumberDecimal2"
+                android:id="@+id/edtN2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -79,10 +79,11 @@
                 android:autofillHints="" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnCalc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@android:color/holo_green_dark"
+                android:onClick="calcular"
                 android:text="@string/strCalc"
                 android:textColor="#212121"
                 tools:ignore="TextContrastCheck" />
@@ -102,7 +103,7 @@
                 android:text="@string/strM" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/txtM"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/strZero"
@@ -115,7 +116,7 @@
                 android:text="@string/strSit" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/txtSit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/strSitRp"
